--- a/style.css
+++ b/style.css
@@ -12,17 +12,17 @@ corpo {
 }
 
 h1 {
-  altura :  150px ; _
+  altura :  150px; _
   
     
-  cor de fundo :   #0000CD ;
+  cor de fundo :#0000CD;
 
-  tamanho da fonte : 80px;
+  tamanho da fonte :80px;
   
-  estilo da fonte :  itálico ;
+  estilo da fonte :itálico ;
  
 }
 h2 {
-    Cor :    # 000000 ; 
+  color: # 000000 ; 
 
 }
